<?xml version="1.0" encoding="utf-8"?>
<!-- Application text
 
 @author Martin Denham [mjdenham at gmail dot com]
 @see gnu.lgpl.License for license details.<br>
      The copyright to this program is held by it's author.
-->
<resources>
    <string name="app_name">And Bible</string>

	<!-- Startup & Help -->
    <string name="splash_top_text">\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3</string>
    <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
    <string name="help_text_long">Navigation\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger
    \n\nPress the MENU key for actions
    \n\nTo download more documents press Menu/More/Download Documents
    \n\nLong press on the bible view to open the context menu for actions affecting the current verse.
    \nLong press on a document in the document selector to delete it or view information.
    \n\nSpeech\nPress Speak to access a dialog to start or stop reading
    \n\nBookmarks\nBookmarks can be added via the verse context menu.  The Bookmark Manager is accessed via the main menu.  The Bookmark Manager context menu allows bookmarks to be grouped using labels.</string>
    <string name="version_text">Version %s</string>
	<string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
    
    <!-- main menu -->
    <string name="chooseBook">Document</string>
    <string name="selectPassage">Passage</string>
    <string name="search">Find</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="speak">Speak</string>
    <string name="help">Help</string>
    
    <!-- Passage navigation -->
    <string name="choosePassageBookName">Choose Book</string>
    <string name="choosePassageChapterName">Choose Chapter</string>
    <string name="choosePassageVerseName">Choose Verse</string>

	<!--  Search -->
    <string name="search_index">Search Index</string>
    <string name="index_creation_required">An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n</string>
    <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
    <string name="index">Index</string>
    <string name="index_download">Download</string>
    <string name="index_not_available_for_download">This index is not available for download</string>
    <string name="index_create">Create</string>

	<!-- Tasks -->
    <string name="progress_status">Progress</string>
    <string name="task_kill_warning">These long running tasks may terminate if you switch to another application before they finish.</string>
    <string name="no_tasks_running">There are no tasks currently being executed.</string>

    <!-- Search -->
    <string name="search_words_group_prompt">Find verses</string>
    <string name="search_all_words">All words</string>
    <string name="search_any_word">Any word</string>
    <string name="search_phrase">Phrase</string>
    <string name="search_result_count">%d matches found</string>
    <string name="search_showing_first">Too many matches.  Showing first %d</string> 
    <string name="search_bible_section_group_prompt">Search Where</string>
    <string name="search_all_bible">Whole bible</string>
    <string name="search_new_testament">New Testament</string>
    <string name="search_old_testament">Old Testament</string>
    <string name="search_current_book">Current book</string>
    <string name="error_executing_search">Invalid search query</string>

    <!-- Preferences -->
    <string name="prefs_show_verseno_title">Verse numbers</string>
    <string name="prefs_show_verseno_summary">Show verse numbers</string>
    <string name="prefs_verse_per_line_title">One verse per line</string>
    <string name="prefs_verse_per_line_summary">Show each verse on a different line</string>
    <string name="prefs_show_notes_title">Notes</string>
    <string name="prefs_show_notes_summary">Show notes</string>
    <string name="prefs_show_strongs_title">Show Strong\'s numbers</string>
    <string name="prefs_show_strongs_summary">Links to Greek &amp; Hebrew definitions</string>
    <string name="prefs_show_morphology_title">Morphological codes</string>
    <string name="prefs_show_morphology_summary">Show Robinson\'s Greek morphology</string>
    <string name="prefs_night_mode_title">Night mode</string>
    <string name="prefs_night_mode_summary">For easier reading in the dark</string>
    <string name="prefs_navigate_to_verse_title">Navigate to verse</string>
    <string name="prefs_navigate_to_verse_summary">Drill down to verse when navigating</string>
    <string name="prefs_text_size_title">Text size</string>
    <string name="prefs_text_size_summary">See more or see more clearly</string>
    <string name="prefs_interface_locale_title">Application language</string>
    <string name="prefs_interface_locale_summary">Select custom user interface language</string>
    <string name="locale_change_warning">Application will be restarted to switch to the new interface language</string>

    <!-- Notes screen -->
    <string name="no_chapter_notes">No notes exist in this chapter</string>
    <string name="no_verse_notes">No notes exist in this verse</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!--  Strongs -->
    <string name="strongs">Strong\'s Dictionary</string>
    <string name="strongs_not_installed">Please download Strong\'s Hebrew and Greek dictionaries</string>
    <string name="all_greek_occurrences">Find all occurrences</string>
    <string name="all_hebrew_occurrences">Find all occurrences</string>
    <string name="no_indexed_bible_with_strongs_ref">You must download a bible containing Strong\'s numbers and download its index via Search</string>
    <string name="morph_robinson_not_installed">Please download \'Robinson\'s Morphological Analysis Codes\' dictionary</string>

    <!-- Module download -->
    <string name="download">Download Documents</string>
    <string name="download_confirmation">Download a bible from the internet?</string>
    <string name="download_source_message">Documents are downloaded from\nhttp://www.crosswire.org\n&amp; http://xiphos.org</string>
    <string name="download_document_confirm_prefix">"Download "</string>
    <string name="refresh_book_list">Refresh list of available documents?</string>
    <string name="error_downloading">An error occurred downloading.  Please check your internet connection.</string>
    <string name="no_internet_connection">Could not connect to the internet</string>
    <string name="storage_space_warning">Insufficient local storage space.</string>
    <string name="wait_for_bible">Please wait for the bible to finish downloading.  You will then be taken to the main screen.</string>
    <string name="wait_for_bible_not_yet">Please wait.  A bible has not yet completed installation.</string>
    <string name="download_complete_no_bibles">No bible was installed.  Please press Back and try again.</string>
    <string name="too_many_jobs">Too many tasks executing.  Please wait for some to finish and try again.</string>

    <!-- Document context menu -->
    <string name="delete">Delete</string>
    <string name="delete_index">Delete search index</string>
    <string name="about">About</string>
    <string name="delete_doc">Delete %s?</string>
    <string name="delete_search_index_doc">Delete index of %s?</string>
    
    <!-- Verse context menu -->
    <string name="notes">Footnotes and references</string>
    <string name="copy">Copy current verse</string>
    <string name="share_verse">Share current verse ...</string>
    <string name="share_verse_subject">A Bible verse has been shared with you using And Bible</string>

    <!-- Bookmarks -->
    <string name="bookmarks">Bookmarks</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_exists">Bookmark already exists</string>
    <string name="bookmark_labels">Bookmark Labels</string>
    <string name="assign_labels">Assign labels</string>
    <string name="new_label">New Label</string>
    <string name="new_label_prompt">Name</string>
    
    <!-- Dictionary -->
    <string name="dictionary">Dictionary</string>
    <string name="search_dictionary_hint">Search dictionary</string>
    <string name="dictionary_contents">Contents</string>

    <!-- General Book -->
    <string name="general_book">Book</string>
    <string name="general_book_contents">Contents</string>


    <!-- Speak -->
    <!-- Speak - Bible -->
    <plurals name="num_chapters">
        <item quantity="one">%d chapter</item>
        <item quantity="other">%d chapters</item>
    </plurals>
    <string name="rest_of_book">To end of book</string>
    <!-- Speak - Commentary -->
    <plurals name="num_verses">
        <item quantity="one">%d verse</item>
        <item quantity="other">%d verses</item>
    </plurals>
    <string name="rest_of_chapter">To end of chapter</string>
    <!-- Speak - Dictionary and other -->
    <plurals name="num_pages">
        <item quantity="one">%d page</item>
        <item quantity="other">%d pages</item>
    </plurals>
    <!-- Speak - Common -->
    <string name="stop">Stop</string>
    <string name="tts_lang_not_available">Language is not available.</string>

	<!-- Document types -->    
	<string name="doc_type_bible">Bible</string>
	<string name="doc_type_commentary">Commentary</string>
	<string name="doc_type_dictionary">Dictionary</string>
	<string name="doc_type_book">Book</string>

    <!-- Languages -->
	<string name="lang_default">Default</string>
	
    <!-- General -->
    <string name="error_occurred">An error has occurred</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="error">Error </string>
    <string name="more">More</string>
    <string name="retry">Try Again</string>
    <string name="please_wait">Please wait...</string>
    <string name="all">All</string>
</resources>
