<?xml version="1.0" encoding="utf-8"?>
<!-- Preference configuration
 
 @author Martin Denham [mjdenham at gmail dot com]
 @see gnu.lgpl.License for license details.<br>
      The copyright to this program is held by it's author.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
			android:key="bible_display_pref">
	<CheckBoxPreference android:key="show_verseno_pref" 
				android:title="@string/prefs_show_verseno_title"
				android:summary="@string/prefs_show_verseno_summary"
				android:defaultValue="true"/>
	<CheckBoxPreference android:key="show_notes_pref" 
				android:title="@string/prefs_show_notes_title"
				android:summary="@string/prefs_show_notes_summary"
				android:defaultValue="true"/> 
	<CheckBoxPreference android:key="show_strongs_pref" 
				android:title="@string/prefs_show_strongs_title"
				android:summary="@string/prefs_show_strongs_summary"
				android:defaultValue="true"/> 
	<CheckBoxPreference android:key="night_mode_pref" 
				android:title="@string/prefs_night_mode_title"
				android:summary="@string/prefs_night_mode_summary"
				android:defaultValue="false"/> 
	<net.bible.android.view.util.TextSizePreference android:key="text_size_pref" 
				android:title="@string/prefs_text_size_title"
				android:summary="@string/prefs_text_size_summary"
				android:defaultValue="16"
				android:max="34"/> 
	<CheckBoxPreference android:key="grid_navigation_pref" 
				android:title="@string/prefs_grid_navigation_title"
				android:summary="@string/prefs_grid_navigation_summary"
				android:defaultValue="true"/> 
</PreferenceScreen>
