<?xml version="1.0" encoding="utf-8"?>
<!-- The main menu accessed via Menu key
 
 @author Martin Denham [mjdenham at gmail dot com]
 @see gnu.lgpl.License for license details.<br>
      The copyright to this program is held by it's author.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/selectPassageButton" 
		  android:title="@string/selectPassage"
		  android:icon="@android:drawable/ic_menu_today"/>

	<item 	android:id="@+id/chooseBookButton" 
			android:title="@string/chooseBook"
			android:icon="@android:drawable/ic_menu_save"/>

	<item 	android:id="@+id/historyButton" 
			android:title="@string/history"
			android:icon="@android:drawable/ic_menu_recent_history"/>

	<item android:id="@+id/searchButton"
		  android:title="@string/search"
		  android:icon="@android:drawable/ic_menu_search"/>

	<item android:id="@+id/notesButton"
		  android:title="@string/notes"
		  android:icon="@android:drawable/ic_menu_add"/>
		  
	<item android:id="@+id/settingsButton"
		  android:title="@string/settings"
		  android:icon="@android:drawable/ic_menu_preferences"/>

	<item android:id="@+id/downloadButton"
		  android:title="@string/download"
		  android:icon="@drawable/ic_menu_goto"/>
</menu>
